--- a/PUBLIC/pagina_de_contacto.html
+++ b/PUBLIC/pagina_de_contacto.html
@@ -46,19 +46,28 @@
                         <h1 class="h3 mb-3 fw-normal fw-bold">Contacta con nosotros</h1>
 
                         <div class="form-floating mb-3"> <!--  Imput Nombre -->
-                            <input type="text" class="form-control" id="floatingInput" name="nombre" placeholder="Jaime Rodriguez">
+                            <input type="text" class="form-control" id="floatingInput" name="nombre"
+                                placeholder="Jaime Rodriguez">
                             <label for="floatingInput">Nombre</label>
                         </div>
 
                         <div class="form-floating mb-3"> <!--  Imput Email -->
-                            <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@ejemplo.com">
+                            <input type="email" class="form-control" id="floatingInput" name="email"
+                                placeholder="name@ejemplo.com">
                             <label for="floatingInput">Tu email</label>
+                        </div>
+
+                        <div class="form-floating mb-3"> <!--  Imput Nombre -->
+                            <input type="tel" class="form-control" id="floatingInput" name="nombre"
+                                placeholder="Jaime Rodriguez">
+                            <label for="floatingInput">Telefono</label>
                         </div>
 
                         <div class="mb-3"> <!--  Imput Comentario -->
                             <label for="exampleFormControlTextarea1" class="form-label">Comentario</label>
-                            <textarea class="form-control" name="comentario" id="exampleFormControlTextarea1" rows="3"></textarea>
-                          </div>
+                            <textarea class="form-control" name="comentario" id="exampleFormControlTextarea1"
+                                rows="3"></textarea>
+                        </div>
 
                         <button class="btn btn-primary w-100 py-2 mt-5 mb-3" type="submit">Enviar mensaje</button>
                     </form>
