--- a/PUBLIC/tema_de_la_pagina.html
+++ b/PUBLIC/tema_de_la_pagina.html
@@ -2,59 +2,86 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi pagina web</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi pagina web</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="../CSS/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="p-3 text-bg-dark">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+  <header class="p-3 text-bg-dark">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="../index.html" class="nav-link px-2 text-white">Inicio</a></li>
-                    <li><a href="pagina_de_contacto.html" class="nav-link px-2 text-white">Contacto</a></li>
-                    <li><a href="pagina_red.html" class="nav-link px-2 text-white">Redes</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">Temas</a></li>
-                    <li><a href="sobre_mi.html" class="nav-link px-2 text-white">Sobre mi</a></li>
-                    <li><a href="pagina_FII.html" class="nav-link px-2 text-white">Fundamentos</a></li>
-                </ul>
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="../index.html" class="nav-link px-2 text-white">Inicio</a></li>
+          <li><a href="pagina_de_contacto.html" class="nav-link px-2 text-white">Contacto</a></li>
+          <li><a href="pagina_red.html" class="nav-link px-2 text-white">Redes</a></li>
+          <li><a href="#" class="nav-link px-2 text-secondary">Temas</a></li>
+          <li><a href="sobre_mi.html" class="nav-link px-2 text-white">Sobre mi</a></li>
+          <li><a href="pagina_FII.html" class="nav-link px-2 text-white">Fundamentos</a></li>
+        </ul>
 
-            </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="px-4 py-5 my-5 text-center">
+      <h1 class="display-5 fw-bold text-body-emphasis">Steam Deck</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">En esta pagina contaremos informacion relevante sobre la Steam Deck</p>
+        <p class="lead mb-4">La steam deck es una consola portatil de Valve la cual cuenta con un sistema operativo
+          desarrollado por steam basado en el kernel de linux</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         </div>
-    </header>
+      </div>
+    </div>
 
-    <main>
-        <div class="px-4 py-5 my-5 text-center">
-            <h1 class="display-5 fw-bold text-body-emphasis">Steam Deck</h1>
-            <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">En esta pagina contaremos informacion relevante sobre la Steam Deck</p>
-              <p class="lead mb-4">La steam deck es una consola portatil de Valve la cual cuenta con un sistema operativo desarrollado por steam basado en el kernel de linux</p>
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-              </div>
-            </div>
+    <!-- <div class="row flex-lg-row-reverse align-items-center">
+      <div class="col col-sm-6 col-lg-5">
+        <img src="IMG/steamdeck.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="500"
+          height="400" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Algo mas sobre SteamDeck</h1>
+        <p class="lead">Esta es la steam deck</p>
+        <p class="lead">la steam deck al fin y al cabo es un ordenador con una pantalla integrada y un sistema
+          especializado para jugar. Juntas todo lo bueno del ordenador con la comodidad de los controles de una consola
+        </p>
+        <p class="lead">Mas abajo encontraras un enlze a la pagina web de la steam deck</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" onclick="location.href='https://store.steampowered.com/steamdeck'"
+            class="btn btn-primary btn-lg px-4 me-md-2">Steam</button>
+        </div>
+      </div>
+    </div> -->
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="IMG/steamdeck.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="600"
+            height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Algo mas sobre SteamDeck</h1>
+          <p class="lead">Esta es la steam deck</p>
+          <p class="lead">La steam deck al fin y al cabo es un ordenador con una pantalla integrada y un sistema
+            especializado para jugar. Juntas todo lo bueno del ordenador con la comodidad de los controles de una
+            consola
+          </p>
+          <p class="lead">Mas abajo encontraras un enlze a la pagina web de la steam deck</p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button" onclick="location.href='https://store.steampowered.com/steamdeck'"
+              class="btn btn-primary btn-lg px-4 me-md-2">Steam</button>
           </div>
+        </div>
+      </div>
+    </div>
 
-          <div class="row flex-lg-row-reverse align-items-center">
-            <div class="col col-sm-6 col-lg-5">
-              <img src="IMG/steamdeck.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="600" height="400" loading="lazy">
-            </div>
-            <div class="col-lg-6">
-              <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Algo mas sobre SteamDeck</h1>
-              <p class="lead">Esta es la steam deck</p>
-              <p class="lead">la steam deck al fin y al cabo es un ordenador con una pantalla integrada y un sistema especializado para jugar. Juntas todo lo bueno del ordenador con la comodidad de los controles de una consola</p>
-              <p class="lead">Mas abajo encontraras un enlze a la pagina web de la steam deck</p>
-              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" onclick="location.href='https://store.steampowered.com/steamdeck'" class="btn btn-primary btn-lg px-4 me-md-2">Steam</button>
-              </div>
-            </div>
-          </div>
-    </main>
+  </main>
 
 
 
