--- a/PUBLIC/pagina_de_contacto.html
+++ b/PUBLIC/pagina_de_contacto.html
@@ -58,8 +58,8 @@
                         </div>
 
                         <div class="form-floating mb-3"> <!--  Imput Nombre -->
-                            <input type="tel" class="form-control" id="floatingInput" name="nombre"
-                                placeholder="Jaime Rodriguez">
+                            <input type="number" class="form-control" id="floatingInput" name="telefono"
+                                placeholder="123456789">
                             <label for="floatingInput">Telefono</label>
                         </div>
 
@@ -68,7 +68,8 @@
                             <textarea class="form-control" name="comentario" id="exampleFormControlTextarea1"
                                 rows="3"></textarea>
                         </div>
-
+                        <input type="hidden" name="_captcha"
+                            value="false"><!--Quitar la autentificacion por captcha al enviar los datos-->
                         <button class="btn btn-primary w-100 py-2 mt-5 mb-3" type="submit">Enviar mensaje</button>
                     </form>
                 </div>
